# johnsons-algorithm

./: Cargo.toml  README.md  TODO.md
.github/workflows/: build.yml
egs/: all_vars.lp  clark_eg.lp  loop_eg.lp  reach.lp  reach.lp~  test.lp  wildcard.lp
src/: checker.rs  circuits.rs  formula.rs  interned.rs  lib.rs  main.rs  options.rs  parser.lalrpop  safety.rs  syntax.rs
