[package]
name = "logroll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
lalrpop = { version = "0.19.7", features = ["lexer"] }

[dependencies]
pretty = "0.11"
clap = { version = "3.0.10", features = ["derive"] }
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
log = "0.4"
env_logger = "0.9"
regex = "1"
thiserror = "1.0"